--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -100,60 +100,64 @@
   <script>showSource('button-with-icon')</script>
   <div id="div-button-with-icon"></div>
 
-  <h2 id="button-with-text"><a href="#button-with-text-primary-filled">button with text</a></h2>
-  <script id="script-button-with-text">
+  <h2 id="button-with-text-primary-no-border"><a href="#button-with-text-primary-no-border">button with text</a></h2>
+  <script id="script-button-with-text-primary-no-border">
     window.addEventListener('DOMContentLoaded', (event) => {
-      $('#div-button-with-text').appendChild(
+      $('#div-button-with-text-primary-no-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Primary, filled: true })
+        }, { buttonType: UI.widgets.ButtonType.Primary, needsBorder: false })
       )
     })
   </script>
-  <pre id="viewSource-button-with-text"></pre>
-  <script>showSource('button-with-text')</script>
-  <div id="div-button-with-text"></div>
+  <pre id="viewSource-button-with-text-primary-no-border"></pre>
+  <script>showSource('button-with-text-primary-no-border')</script>
+  <div id="div-button-with-text-primary-no-border"></div>
 
-  <h2 id="button-with-text"><a href="#button-with-text-primary-notfilled">button with text</a></h2>
-  <script id="script-button-with-text">
+  <h2 id="button-with-text-primary-needs-border"><a href="#button-with-text-primary-needs-border">button with text</a>
+  </h2>
+  <script id="script-button-with-text-primary-needs-border">
     window.addEventListener('DOMContentLoaded', (event) => {
-      $('#div-button-with-text').appendChild(
+      $('#div-button-with-text-primary-needs-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Primary, filled: false })
+        }, { buttonType: UI.widgets.ButtonType.Primary, needsBorder: true })
       )
     })
   </script>
-  <pre id="viewSource-button-with-text"></pre>
-  <script>showSource('button-with-text')</script>
-  <div id="div-button-with-text"></div>
+  <pre id="viewSource-button-with-text-primary-needs-border"></pre>
+  <script>showSource('button-with-text-primary-needs-border')</script>
+  <div id="div-button-with-text-primary-needs-border"></div>
 
-  <h2 id="button-with-text"><a href="#button-with-text-secondary-filled">button with text</a></h2>
-  <script id="script-button-with-text">
+  <h2 id="button-with-text-secondary-no-border"><a href="#button-with-text-secondary-no-border">button with text</a>
+  </h2>
+  <script id="script-button-with-text-secondary-no-border">
     window.addEventListener('DOMContentLoaded', (event) => {
-      $('#div-button-with-text').appendChild(
+      $('#div-button-with-text-secondary-no-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Secondary, filled: true })
+        }, { buttonType: UI.widgets.ButtonType.Secondary, needsBorder: false })
       )
     })
   </script>
-  <pre id="viewSource-button-with-text"></pre>
-  <script>showSource('button-with-text')</script>
-  <div id="div-button-with-text"></div>
-  <h2 id="button-with-text"><a href="#button-with-text-secondary-notfilled">button with text</a></h2>
-  <script id="script-button-with-text">
+  <pre id="viewSource-button-with-text-secondary-no-border"></pre>
+  <script>showSource('button-with-text-secondary-no-border')</script>
+  <div id="div-button-with-text-secondary-no-border"></div>
+
+  <h2 id="button-with-text-secondary-needs-border"><a href="#button-with-text-secondary-needs-border">button with
+      text</a></h2>
+  <script id="script-button-with-text-secondary-needs-border">
     window.addEventListener('DOMContentLoaded', (event) => {
-      $('#div-button-with-text').appendChild(
+      $('#div-button-with-text-secondary-needs-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Secondary, filled: false })
+        }, { buttonType: UI.widgets.ButtonType.Secondary, needsBorder: true })
       )
     })
   </script>
-  <pre id="viewSource-button-with-text"></pre>
-  <script>showSource('button-with-text')</script>
-  <div id="div-button-with-text"></div>
+  <pre id="viewSource-button-with-text-secondary-needs-border"></pre>
+  <script>showSource('button-with-text-secondary-needs-border')</script>
+  <div id="div-button-with-text-secondary-needs-border"></div>
 
   <h2 id="cancelButton"><a href="#cancelButton">cancelButton</a></h2>
   <script id="script-cancelButton">
