added the hover color

--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -106,7 +106,7 @@
       $('#div-button-with-text-primary-no-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Primary, needsBorder: false })
+        }, { buttonColor: 'Primary', needsBorder: false })
       )
     })
   </script>
@@ -121,7 +121,7 @@
       $('#div-button-with-text-primary-needs-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Primary, needsBorder: true })
+        }, { buttonColor: 'Primary', needsBorder: true })
       )
     })
   </script>
@@ -136,7 +136,7 @@
       $('#div-button-with-text-secondary-no-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Secondary, needsBorder: false })
+        }, { buttonColor: 'Secondary', needsBorder: false })
       )
     })
   </script>
@@ -151,7 +151,7 @@
       $('#div-button-with-text-secondary-needs-border').appendChild(
         UI.widgets.button(document, undefined, 'test', () => {
           window.alert('clicked!')
-        }, { buttonType: UI.widgets.ButtonType.Secondary, needsBorder: true })
+        }, { buttonColor: 'Secondary', needsBorder: true })
       )
     })
   </script>
