Undo newlines to reduce diff

--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -257,8 +257,7 @@
   <pre id="viewSource-faviconOrDefault"></pre><script>showSource('faviconOrDefault')</script>
   <div id="div-faviconOrDefault"></div>
 
- <h2 id="fileUploadButtonDiv"><a href="#fileUploadButtonDiv"><a href="#fileUploadButtonDiv">fileUploadButtonDiv</a></a>
-  </h2>
+ <h2 id="fileUploadButtonDiv"><a href="#fileUploadButtonDiv"><a href="#fileUploadButtonDiv">fileUploadButtonDiv</a></a></h2>
   <script id="script-fileUploadButtonDiv">
     window.addEventListener('DOMContentLoaded', (event) => {
       const result = UI.widgets.fileUploadButtonDiv(document, (files) => {
