better headers in examples

--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -93,7 +93,7 @@
   <pre id="viewSource-button-with-icon"></pre><script>showSource('button-with-icon')</script>
   <div id="div-button-with-icon"></div>
 
- <h2 id="button-with-text-primary-no-border"><a href="#button-with-text-primary-no-border">button with text</a></h2>
+ <h2 id="button-with-text-primary-no-border"><a href="#button-with-text-primary-no-border">button with text (primary color, no border)</a></h2>
   <script id="script-button-with-text-primary-no-border">
     window.addEventListener('DOMContentLoaded', (event) => {
       $('#div-button-with-text-primary-no-border').appendChild(
@@ -106,7 +106,7 @@
   <pre id="viewSource-button-with-text-primary-no-border"></pre><script>showSource('button-with-text-primary-no-border')</script>
   <div id="div-button-with-text-primary-no-border"></div>
 
- <h2 id="button-with-text-primary-needs-border"><a href="#button-with-text-primary-needs-border">button with text</a>
+ <h2 id="button-with-text-primary-needs-border"><a href="#button-with-text-primary-needs-border">button with text< (primary color, needs border)/a>
   </h2>
   <script id="script-button-with-text-primary-needs-border">
     window.addEventListener('DOMContentLoaded', (event) => {
@@ -120,7 +120,7 @@
   <pre id="viewSource-button-with-text-primary-needs-border"></pre><script>showSource('button-with-text-primary-needs-border')</script>
   <div id="div-button-with-text-primary-needs-border"></div>
 
- <h2 id="button-with-text-secondary-no-border"><a href="#button-with-text-secondary-no-border">button with text</a>
+ <h2 id="button-with-text-secondary-no-border"><a href="#button-with-text-secondary-no-border">button with text (secondary color, no border)</a>
   </h2>
   <script id="script-button-with-text-secondary-no-border">
     window.addEventListener('DOMContentLoaded', (event) => {
@@ -134,8 +134,7 @@
   <pre id="viewSource-button-with-text-secondary-no-border"></pre><script>showSource('button-with-text-secondary-no-border')</script>
   <div id="div-button-with-text-secondary-no-border"></div>
 
- <h2 id="button-with-text-secondary-needs-border"><a href="#button-with-text-secondary-needs-border">button with
-      text</a></h2>
+ <h2 id="button-with-text-secondary-needs-border"><a href="#button-with-text-secondary-needs-border">button with text (secondary color, needs border)</a></h2>
   <script id="script-button-with-text-secondary-needs-border">
     window.addEventListener('DOMContentLoaded', (event) => {
       $('#div-button-with-text-secondary-needs-border').appendChild(
