--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -79,7 +79,7 @@
     <pre id="viewSource-attachmentList"></pre><script>showSource('attachmentList')</script>
     <div id="div-attachmentList"></div>
 
-    <h2 id="button with icon"><a href="#button-with-icon">button with icon</a></h2>
+    <h2 id="button-with-icon"><a href="#button-with-icon">button with icon</a></h2>
     <script id="script-button-with-icon">
       window.addEventListener('DOMContentLoaded', (event) => {
         const solidLogo = 'https://solidproject.org/assets/img/solid-emblem.svg'
