change idp do solidcommunity.net in header example

--- a/examples/header/index.html
+++ b/examples/header/index.html
@@ -37,7 +37,7 @@
 <body>
 
   <h2 id="header"><a href="#header">Header</a>
-    <button class="loginButton" onclick="login('https://solid.community')">Login</button>
+    <button class="loginButton" onclick="login('https://solidcommunity.net')">Login</button>
     <script>
       async function login(idp) {
         const session = await solid.auth.currentSession();
