--- a/Documentation/form-examples/demo.html
+++ b/Documentation/form-examples/demo.html
@@ -52,7 +52,7 @@
             border-top: 0.1em solid gray;
         }
     </style>
-    <script type="text/javascript" src="../../../lib/webpack-bundle.js"></script>
+    <script type="text/javascript" src="https://solid.github.io/mashlib/dist/mashlib.js"></script>
     <script type="text/javascript" src="test-tabs.js"></script>
 </head>
 
